tests/data/auth-basic-secrets/standard/auth-basic-secrets-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-basic-secrets-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/basic-auth-secret: "auth-basic-secrets-key"
    nginx.org/basic-auth-realm: "AuthBasic Secrets App"
spec:
  rules:
  - host: "auth-basic-secrets.example.com"
    http:
      paths:
      - path: /backend2
        pathType: Prefix
        backend:
          service:
            name: backend2-svc
            port:
              number: 80
      - path: /backend1
        pathType: Prefix
        backend:
          service:
            name: backend1-svc
            port:
              number: 80
